# Advent-Of-Code

./: .gitignore  Cargo.toml  Makefile  README.md  aoc.sh  build.rs  rustfmt.toml  session.cookie
.github/workflows/: aoc2015.yml  aoc2024.yml  aoc_2015.yml  aoc_2016.yml  aoc_2023.yml  aoc_2024.yml  build.yml  checks.yml  clippy.yml  docs.yml  repo.yml  test2015.yml  test2024.yml  tests.yml
112023/rust-project/: .gitignore  Cargo.toml
112023/rust-project/src/: main.rs
2015/01/: 1.py
2015/02/: 2.py
2015/rust-project/: Cargo.toml
2016/get_rusty_2016/: .gitignore  Cargo.toml
2016/rust-project/: Cargo.toml
2019/01/: part2.jl
2019/02/: part1.m  part2.jl
2019/03/: part2.m
2019/05/: part2.m
2019/06/: part2.m
2019/07/: part2.m
2019/08/: part2.m
2019/10/: part1.m
2019/12/: part1.py
2019/14/: solver.py
2019/Day1/: part1.jl
2019/Day10/: part2.m  part2.py
2019/Day2/: part1.jl
2019/Day3/: part1.jl  part1.m
2019/Day4/: part1.m  part2.m
2019/Day5/: part1.m
2019/Day6/: part1.m
2019/Day7/: intcode_computer.m  part1.m
2019/Day8/: part1.m
2019/Day9/: intcode_computer.m  load_opcode.m  part1.m
2020/: 1.py  3.py  5.py  6.py  8.py
2020/02/: 2.py
2020/03/: 3.py
2020/04/: 4.py
2020/05/: 5.py
2020/06/: 6.py
2020/07/: 7.py
2020/09/: 9.py
2020/10/: 10.py
2020/11/: 11.py
2020/12/: 12.py
2021/: .gitignore  1.cpp  10.py  14.py  15.py  16.py  2.py  7.py  9.py  adoc.h  new.py
2021/03/: 3.py
2021/04/: 4.py
2021/05/: 5.py
2021/06/: 6.py
2021/07/: 7.cpp
2021/08/: 8.py
2021/11/: 11.py
2021/12/: 12.py
2021/13/: 13.py
2021/17/: 17.py
2022/: 01.py  02.py  03.py
aoc_2015/: Cargo.toml
aoc_2016/: Cargo.toml
aoc_2023/: .gitignore  Cargo.toml
aoc_2023/inputs/: 12.in  16.in
aoc_2023/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc_2024/: .gitignore  Cargo.toml
benches/: benchmarks.rs
common/: Cargo.toml
src/: args.rs  lib.rs  main.rs
tests/: test.rs
tools/: get_input.jl  get_input.py
(+208 files in other folders)
