[package]
name = "aoc"
version = "2025.9.26"
edition = "2024"
rust-version = "1.90"

# Speed up benchmarking by not recompiling everything when only a single file changes.
[profile.bench]
incremental = true

[lints.rustdoc]
private_intra_doc_links = "allow"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
ahash = "0.8.12"
cached = "0.56.0"
criterion = "0.7.0"
fancy-regex = "0.16.2"
itertools = "0.14.0"
lazy_static = "1.5.0"
md5 = "0.8.0"
priority-queue = "2.7.0"
regex = "1.11.3"
serde_json = "1.0.145"

