[package]
name = "aoc"
version = "2025.10.9"
edition = "2024"
rust-version = "1.90"

[profile.bench]
incremental = true

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
cached = "0.56.0"
criterion = "0.7.0"
fancy-regex = "0.16.2"
good_lp = "1.14.2"
hashbrown = "0.16.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
md5 = "0.8.0"
regex = "1.11.3"
serde_json = "1.0.145"
