[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

[dependencies]
counter = "0.5.7"
itertools = "0.12.0"
common = { path = "../common" }
indoc = "2.0.4"
petgraph = "0.6.4"
rustworkx-core = "0.13.2"

# z3 = {version="0.12", features = ["static-link-z3"]}
num-traits = "0.2.17"
nd_vec = "0.4.0"
