[package]
name = "AdventOfCode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
md5 = "0.7.0"
fancy-regex = "0.12.0"
lazy_static = "1.4.0"
regex = "1.10.2"
itertools = "0.12.0"
serde_json = "1.0.108"
